[package]
name = "fluxus-sink-demo"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Fluxus Team"]
description = "A demo sink component for the Fluxus stream processing framework, demonstrating how to create a custom sink implementation."
homepage = "https://github.com/fluxus-labs/fluxus-sink-demo"
repository = "https://github.com/fluxus-labs/fluxus-sink-demo"
readme = "README.md"
categories = ["database", "development-tools", "asynchronous", "science"]
keywords = [
    "stream-processing",
    "real-time",
    "data-processing",
    "analytics",
    "async",
    "demo",
]

[dependencies]
fluxus = { version="0.2", features = ["full"] }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3.19"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
